src/messages.h

struct mdhim_t;
/* Generic receive message */
struct mdhim_rm_t {
	int mtype;  
	int server_rank;
	int size;
	int index;
	int index_type;
	int error;
};
/* Bulk get receive message */
struct mdhim_bgetrm_t {
	int mtype;
	int server_rank;
	int size;
	int index;
	int index_type;
	int error;
	void **keys;
	int *key_lens;
	void **values;
	int *value_lens;
	int num_keys;
	struct mdhim_bgetrm_t *next;
};
/* Bulk generic receive message */
struct mdhim_brm_t {
	int mtype;
	int server_rank;
	int size;
	int index;
	int index_type;
	int error;
	struct mdhim_brm_t *next;
};