src/mdhim_options.h

// Options for the database (used when opening a MDHIM dataStore)
typedef struct mdhim_options_t {
	// -------------------
	//Directory location of DBs
	char *db_path;
   
	//Multiple paths of DBs
	char **db_paths;
	//Number of paths in db_paths
	int num_paths;

	char *manifest_path;

	//Name of each DB (will be modified by adding "_<RANK>" to create multiple
	// unique DB for each rank server.
	char *db_name;
    
	//Different types of dataStores
	//LEVELDB=1 (from data_store.h)
	int db_type;
    
	//Primary key type
	//MDHIM_INT_KEY, MDHIM_LONG_INT_KEY, MDHIM_FLOAT_KEY, MDHIM_DOUBLE_KEY
	//MDHIM_STRING_KEY, MDHIM_BYTE_KEY
	//(from partitioner.h)
	int db_key_type;

	//Force the creation of a new DB (deleting any previous versions if present)
	int db_create_new;

	//Whether to append a value to an existing key or overwrite the value
	//MDHIM_DB_APPEND to append or MDHIM_DB_OVERWRITE (default)
	int db_value_append;
        
	//Convert single put/gets to bulk operations automatically
	int convert_single_bulk;

	//DEBUG level
	int debug_level;
        
        //Used to determine the number of range servers which is based in  
        //if myrank % rserver_factor == 0, then myrank is a server.
        // This option is used to set range_server_factor previously a defined var.
        int rserver_factor;
        
        //Maximum size of a slice. A ranger server may server several slices.
        uint64_t max_recs_per_slice; 

	//Number of worker threads per range server
	int num_wthreads;

	//Login Credentials 
	char *db_host;
	char *dbs_host;
	char *db_user;
	char *db_upswd;
	char *dbs_user;
	char *dbs_upswd;


} mdhim_options_t;