java_api/MdhimLibrary.java

	/**
	 * Original signature : <code>mdhim_brm_t* _create_brm(mdhim_rm_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_private.h:1522</i>
	 */
	public static Pointer<mdhim_brm_t > _create_brm(Pointer<mdhim_rm_t > rm) {
		return (Pointer)Pointer.pointerToAddress(_create_brm(Pointer.getPeer(rm)), mdhim_brm_t.class);
	}
	@Ptr 
	protected native static long _create_brm(@Ptr long rm);
	/**
	 * Original signature : <code>void _concat_brm(mdhim_brm_t*, mdhim_brm_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_private.h:1524</i>
	 */
	public static void _concat_brm(Pointer<mdhim_brm_t > head, Pointer<mdhim_brm_t > new$) {
		_concat_brm(Pointer.getPeer(head), Pointer.getPeer(new$));
	}
	protected native static void _concat_brm(@Ptr long head, @Ptr long new$);
	/**
	 * Original signature : <code>mdhim_brm_t* _bput_records(mdhim_t*, index_t*, void**, int*, void**, int*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_private.h:1526</i>
	 */
	public static Pointer<mdhim_brm_t > _bput_records(Pointer<mdhim_t > md, Pointer<index_t > index, Pointer<Pointer<? > > keys, Pointer<Integer > key_lens, Pointer<Pointer<? > > values, Pointer<Integer > value_lens, int num_records) {
		return (Pointer)Pointer.pointerToAddress(_bput_records(Pointer.getPeer(md), Pointer.getPeer(index), Pointer.getPeer(keys), Pointer.getPeer(key_lens), Pointer.getPeer(values), Pointer.getPeer(value_lens), num_records), mdhim_brm_t.class);
	}
	@Ptr 
	protected native static long _bput_records(@Ptr long md, @Ptr long index, @Ptr long keys, @Ptr long key_lens, @Ptr long values, @Ptr long value_lens, int num_records);
	/**
	 * Original signature : <code>mdhim_bgetrm_t* _bget_records(mdhim_t*, index_t*, void**, int*, int, int, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_private.h:1528</i>
	 */
	public static Pointer<mdhim_bgetrm_t > _bget_records(Pointer<mdhim_t > md, Pointer<index_t > index, Pointer<Pointer<? > > keys, Pointer<Integer > key_lens, int num_keys, int num_records, int op) {
		return (Pointer)Pointer.pointerToAddress(_bget_records(Pointer.getPeer(md), Pointer.getPeer(index), Pointer.getPeer(keys), Pointer.getPeer(key_lens), num_keys, num_records, op), mdhim_bgetrm_t.class);
	}
	@Ptr 
	protected native static long _bget_records(@Ptr long md, @Ptr long index, @Ptr long keys, @Ptr long key_lens, int num_keys, int num_records, int op);
	/**
	 * Original signature : <code>mdhim_brm_t* _bdel_records(mdhim_t*, index_t*, void**, int*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_private.h:1530</i>
	 */
	public static Pointer<mdhim_brm_t > _bdel_records(Pointer<mdhim_t > md, Pointer<index_t > index, Pointer<Pointer<? > > keys, Pointer<Integer > key_lens, int num_records) {
		return (Pointer)Pointer.pointerToAddress(_bdel_records(Pointer.getPeer(md), Pointer.getPeer(index), Pointer.getPeer(keys), Pointer.getPeer(key_lens), num_records), mdhim_brm_t.class);
	}
	@Ptr 
	protected native static long _bdel_records(@Ptr long md, @Ptr long index, @Ptr long keys, @Ptr long key_lens, int num_records);
	/**
	 * Original signature : <code>mdhim_t* mdhimInit(void*, mdhim_options_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1567</i>
	 */
	public static Pointer<mdhim_t > mdhimInit(Pointer<? > appComm, Pointer<mdhim_options_t > opts) {
		return (Pointer)Pointer.pointerToAddress(mdhimInit(Pointer.getPeer(appComm), Pointer.getPeer(opts)), mdhim_t.class);
	}
	@Ptr 
	protected native static long mdhimInit(@Ptr long appComm, @Ptr long opts);
	/**
	 * Original signature : <code>int mdhimClose(mdhim_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1569</i>
	 */
	public static int mdhimClose(Pointer<mdhim_t > md) {
		return mdhimClose(Pointer.getPeer(md));
	}
	protected native static int mdhimClose(@Ptr long md);
	/**
	 * Original signature : <code>int mdhimCommit(mdhim_t*, index_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1571</i>
	 */
	public static int mdhimCommit(Pointer<mdhim_t > md, Pointer<index_t > index) {
		return mdhimCommit(Pointer.getPeer(md), Pointer.getPeer(index));
	}
	protected native static int mdhimCommit(@Ptr long md, @Ptr long index);
	/**
	 * Original signature : <code>int mdhimStatFlush(mdhim_t*, index_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1573</i>
	 */
	public static int mdhimStatFlush(Pointer<mdhim_t > md, Pointer<index_t > index) {
		return mdhimStatFlush(Pointer.getPeer(md), Pointer.getPeer(index));
	}
	protected native static int mdhimStatFlush(@Ptr long md, @Ptr long index);
	/**
	 * Original signature : <code>mdhim_brm_t* mdhimPut(mdhim_t*, void*, int, void*, int, secondary_info*, secondary_info*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1575</i>
	 */
	public static Pointer<mdhim_brm_t > mdhimPut(Pointer<mdhim_t > md, Pointer<? > key, int key_len, Pointer<? > value, int value_len, Pointer<secondary_info > secondary_global_info, Pointer<secondary_info > secondary_local_info) {
		return (Pointer)Pointer.pointerToAddress(mdhimPut(Pointer.getPeer(md), Pointer.getPeer(key), key_len, Pointer.getPeer(value), value_len, Pointer.getPeer(secondary_global_info), Pointer.getPeer(secondary_local_info)), mdhim_brm_t.class);
	}
	@Ptr 
	protected native static long mdhimPut(@Ptr long md, @Ptr long key, int key_len, @Ptr long value, int value_len, @Ptr long secondary_global_info, @Ptr long secondary_local_info);
	/**
	 * Original signature : <code>mdhim_brm_t* mdhimPutSecondary(mdhim_t*, index_t*, void*, int, void*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1577</i>
	 */
	public static Pointer<mdhim_brm_t > mdhimPutSecondary(Pointer<mdhim_t > md, Pointer<index_t > secondary_index, Pointer<? > secondary_key, int secondary_key_len, Pointer<? > primary_key, int primary_key_len) {
		return (Pointer)Pointer.pointerToAddress(mdhimPutSecondary(Pointer.getPeer(md), Pointer.getPeer(secondary_index), Pointer.getPeer(secondary_key), secondary_key_len, Pointer.getPeer(primary_key), primary_key_len), mdhim_brm_t.class);
	}
	@Ptr 
	protected native static long mdhimPutSecondary(@Ptr long md, @Ptr long secondary_index, @Ptr long secondary_key, int secondary_key_len, @Ptr long primary_key, int primary_key_len);
	/**
	 * Original signature : <code>mdhim_brm_t* mdhimBPut(mdhim_t*, void**, int*, void**, int*, int, secondary_bulk_info*, secondary_bulk_info*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1579</i>
	 */
	public static Pointer<mdhim_brm_t > mdhimBPut(Pointer<mdhim_t > md, Pointer<Pointer<? > > primary_keys, Pointer<Integer > primary_key_lens, Pointer<Pointer<? > > primary_values, Pointer<Integer > primary_value_lens, int num_records, Pointer<secondary_bulk_info > secondary_global_info, Pointer<secondary_bulk_info > secondary_local_info) {
		return (Pointer)Pointer.pointerToAddress(mdhimBPut(Pointer.getPeer(md), Pointer.getPeer(primary_keys), Pointer.getPeer(primary_key_lens), Pointer.getPeer(primary_values), Pointer.getPeer(primary_value_lens), num_records, Pointer.getPeer(secondary_global_info), Pointer.getPeer(secondary_local_info)), mdhim_brm_t.class);
	}
	@Ptr 
	protected native static long mdhimBPut(@Ptr long md, @Ptr long primary_keys, @Ptr long primary_key_lens, @Ptr long primary_values, @Ptr long primary_value_lens, int num_records, @Ptr long secondary_global_info, @Ptr long secondary_local_info);
	/**
	 * Original signature : <code>mdhim_bgetrm_t* mdhimGet(mdhim_t*, index_t*, void*, int, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1581</i>
	 */
	public static Pointer<mdhim_bgetrm_t > mdhimGet(Pointer<mdhim_t > md, Pointer<index_t > index, Pointer<? > key, int key_len, int op) {
		return (Pointer)Pointer.pointerToAddress(mdhimGet(Pointer.getPeer(md), Pointer.getPeer(index), Pointer.getPeer(key), key_len, op), mdhim_bgetrm_t.class);
	}
	@Ptr 
	protected native static long mdhimGet(@Ptr long md, @Ptr long index, @Ptr long key, int key_len, int op);
	/**
	 * Original signature : <code>mdhim_bgetrm_t* mdhimBGet(mdhim_t*, index_t*, void**, int*, int, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1583</i>
	 */
	public static Pointer<mdhim_bgetrm_t > mdhimBGet(Pointer<mdhim_t > md, Pointer<index_t > index, Pointer<Pointer<? > > keys, Pointer<Integer > key_lens, int num_records, int op) {
		return (Pointer)Pointer.pointerToAddress(mdhimBGet(Pointer.getPeer(md), Pointer.getPeer(index), Pointer.getPeer(keys), Pointer.getPeer(key_lens), num_records, op), mdhim_bgetrm_t.class);
	}
	@Ptr 
	protected native static long mdhimBGet(@Ptr long md, @Ptr long index, @Ptr long keys, @Ptr long key_lens, int num_records, int op);
	/**
	 * Original signature : <code>mdhim_bgetrm_t* mdhimBGetOp(mdhim_t*, index_t*, void*, int, int, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1585</i>
	 */
	public static Pointer<mdhim_bgetrm_t > mdhimBGetOp(Pointer<mdhim_t > md, Pointer<index_t > index, Pointer<? > key, int key_len, int num_records, int op) {
		return (Pointer)Pointer.pointerToAddress(mdhimBGetOp(Pointer.getPeer(md), Pointer.getPeer(index), Pointer.getPeer(key), key_len, num_records, op), mdhim_bgetrm_t.class);
	}
	@Ptr 
	protected native static long mdhimBGetOp(@Ptr long md, @Ptr long index, @Ptr long key, int key_len, int num_records, int op);
	/**
	 * Original signature : <code>mdhim_brm_t* mdhimDelete(mdhim_t*, index_t*, void*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1587</i>
	 */
	public static Pointer<mdhim_brm_t > mdhimDelete(Pointer<mdhim_t > md, Pointer<index_t > index, Pointer<? > key, int key_len) {
		return (Pointer)Pointer.pointerToAddress(mdhimDelete(Pointer.getPeer(md), Pointer.getPeer(index), Pointer.getPeer(key), key_len), mdhim_brm_t.class);
	}
	@Ptr 
	protected native static long mdhimDelete(@Ptr long md, @Ptr long index, @Ptr long key, int key_len);
	/**
	 * Original signature : <code>mdhim_brm_t* mdhimBDelete(mdhim_t*, index_t*, void**, int*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1589</i>
	 */
	public static Pointer<mdhim_brm_t > mdhimBDelete(Pointer<mdhim_t > md, Pointer<index_t > index, Pointer<Pointer<? > > keys, Pointer<Integer > key_lens, int num_keys) {
		return (Pointer)Pointer.pointerToAddress(mdhimBDelete(Pointer.getPeer(md), Pointer.getPeer(index), Pointer.getPeer(keys), Pointer.getPeer(key_lens), num_keys), mdhim_brm_t.class);
	}
	@Ptr 
	protected native static long mdhimBDelete(@Ptr long md, @Ptr long index, @Ptr long keys, @Ptr long key_lens, int num_keys);
	/**
	 * Original signature : <code>void mdhim_release_recv_msg(void*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1591</i>
	 */
	public static void mdhim_release_recv_msg(Pointer<? > msg) {
		mdhim_release_recv_msg(Pointer.getPeer(msg));
	}
	protected native static void mdhim_release_recv_msg(@Ptr long msg);
	/**
	 * Original signature : <code>secondary_info* mdhimCreateSecondaryInfo(index_t*, void**, int*, int, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim.h:1593</i>
	 */
	public static Pointer<secondary_info > mdhimCreateSecondaryInfo(Pointer<index_t > secondary_index, Pointer<Pointer<? > > secondary_keys, Pointer<Integer > secondary_key_lens, int num_keys, int info_type) {
		return (Pointer)Pointer.pointerToAddress(mdhimCreateSecondaryInfo(Pointer.getPeer(secondary_index), Pointer.getPeer(secondary_keys), Pointer.getPeer(secondary_key_lens), num_keys, info_type), secondary_info.class);
	}
	@Ptr 
	protected native static long mdhimCreateSecondaryInfo(@Ptr long secondary_index, @Ptr long secondary_keys, @Ptr long secondary_key_lens, int num_keys, int info_type);
